# worktimer

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL_QT6.md  LICENSE  README.md  RELEASE.md  STYLES_GUIDE.md  UI_DESIGN_GUIDE.md  WorkTimer.pro  WorkTimer.spec  WorkTimer_Light.spec  WorkTimer_Tkinter.spec  build_cpp.bat  build_installer.bat  clean_bin.bat  clean_qt_deps.bat  clean_qt_deps_minimal.bat  compile_translations.bat  deploy_qt.bat  deploy_qt_optimized.bat  installer.iss  pomodorotimer.py  resources.qrc  setup_qt_creator.bat  worktimer_settings.json
include/: settings.h  worktimer.h
src/: main.cpp  settings.cpp  worktimer.cpp  worktimer_methods.cpp
styles/: dark.qss  light.qss
translations/: worktimer_en.ts  worktimer_ru.ts
ui/: worktimer.ui
